--- a/style.css
+++ b/style.css
@@ -4,57 +4,89 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   overflow: hidden;
-  margin: 0;
+}
+
+.heading-text {
+  text-align: center;
+  font-size: 50px;
+  text-shadow: 2px 2px rgb(169, 79, 169);
+  margin: 50px;
+  animation: text-fade-in 0.5s ease-in;
+}
+
+@keyframes text-fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  75% {
+    opacity: 0.8;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .container {
+  height: 80vh;
   display: flex;
-  width: 90vw;
+  flex-direction: column;
+  align-items: center;
 }
 
 .panel {
-  background-size: auto 100%;
+  width: 90vw;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 80vh;
-  border-radius: 40px;
+  border-radius: 50px;
   cursor: pointer;
   color: white;
-  flex: 0.5;
+  flex: 1;
   margin: 10px;
   position: relative;
-  transition: flex 0.7s ease-in;
+  transition: flex 0.3s ease-in;
 }
 
 .panel h3 {
-  font-size: 24px;
+  font-size: 40px;
+  text-shadow: 2px 2px black;
   position: absolute;
-  bottom: 20px;
-  left: 20px;
-  margin: 0;
+  right: 15px;
+  left: 15px;
   opacity: 0;
 }
 
 .panel.active {
-  flex: 5;
+  flex: 3;
 }
 
 .panel.active h3 {
   opacity: 1;
+  transition: opacity 0.2s ease 0.2s;
 }
 
 @media (max-width: 480px) {
-  .container {
-    width: 100vw;
-  }
-
   .panel:nth-of-type(4),
   .panel:nth-of-type(5) {
     display: none;
+  }
+}
+
+@media (max-width: 618px) {
+  .container {
+    width: 95vw;
+    height: 70vh;
+  }
+
+  .panel.active h3 {
+    top: -20px;
   }
 }
